--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,74 +1,78 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.29)
 
 set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
 set(PROJECT_VESRION 1.0.${PATCH_VERSION})
 
 project(ip_filter VERSION ${PROJECT_VESRION})
 
-find_package(Boost COMPONENTS unit_test_framework REQUIRED)
+# find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
 # configure_file(version.h.in version.h)
 
-add_executable(test ip_filter.cpp)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED On)
+
+add_executable(ipFilter ip_filter.cpp)
 # add_library(helloworld lib.cpp)
-add_executable(test_version test_version.cpp)
-
-set_target_properties(helloworld_cli helloworld test_version PROPERTIES
-    CXX_STANDARD 14
-    CXX_STANDARD_REQUIRED ON
-)
-target_include_directories(helloworld
-    PRIVATE "${CMAKE_BINARY_DIR}"
-)
-set_target_properties(test_version PROPERTIES
-    COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
-    INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
-)
-
-target_link_libraries(helloworld_cli PRIVATE
-    helloworld
-)
-target_link_libraries(test_version
-    ${Boost_LIBRARIES}
-    helloworld
-)
-
-if (MSVC)
-    target_compile_options(helloworld_cli PRIVATE
-        /W4
-    )
-    target_compile_options(helloworld PRIVATE
-        /W4
-    )
-    target_compile_options(test_version PRIVATE
-        /W4
-    )
-else ()
-    target_compile_options(helloworld_cli PRIVATE
-        -Wall -Wextra -pedantic -Werror
-    )
-    target_compile_options(helloworld PRIVATE
-        -Wall -Wextra -pedantic -Werror
-    )
-    target_compile_options(test_version PRIVATE
-        -Wall -Wextra -pedantic -Werror
-    )
-endif()
+# add_executable(test_version test_version.cpp)
 
 
+# set_target_properties(helloworld_cli helloworld test_version PROPERTIES
+#     CXX_STANDARD 14
+#     CXX_STANDARD_REQUIRED ON
+# )
+# target_include_directories(helloworld
+#     PRIVATE "${CMAKE_BINARY_DIR}"
+# )
+# set_target_properties(test_version PROPERTIES
+#     COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
+#     INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
+# )
 
-install(TARGETS helloworld_cli RUNTIME DESTINATION bin)
+# target_link_libraries(helloworld_cli PRIVATE
+#     helloworld
+# )
+# target_link_libraries(test_version
+#     ${Boost_LIBRARIES}
+#     helloworld
+# )
 
-set(CPACK_GENERATOR DEB)
+# if (MSVC)
+#     target_compile_options(helloworld_cli PRIVATE
+#         /W4
+#     )
+#     target_compile_options(helloworld PRIVATE
+#         /W4
+#     )
+#     target_compile_options(test_version PRIVATE
+#         /W4
+#     )
+# else ()
+#     target_compile_options(helloworld_cli PRIVATE
+#         -Wall -Wextra -pedantic -Werror
+#     )
+#     target_compile_options(helloworld PRIVATE
+#         -Wall -Wextra -pedantic -Werror
+#     )
+#     target_compile_options(test_version PRIVATE
+#         -Wall -Wextra -pedantic -Werror
+#     )
+# endif()
 
-set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
-set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
-set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 
-set(CPACK_PACKAGE_CONTACT example@example.com)
 
-include(CPack)
+# install(TARGETS helloworld_cli RUNTIME DESTINATION bin)
 
-enable_testing()
+# set(CPACK_GENERATOR DEB)
 
-add_test(test_version test_version)
+# set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
+# set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
+# set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+
+# set(CPACK_PACKAGE_CONTACT example@example.com)
+
+# include(CPack)
+
+# enable_testing()
+
+# add_test(test_version test_version)
