--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: "C++ CI"
 on:
   push:
     branches:
-      - main
+      - master
       - feature/github_actions
 
 jobs:
@@ -18,7 +18,7 @@ jobs:
       - run: cmake . -DPATCH_VERSION=${{ github.run_number }}
       - run: cmake --build .
       - run: cmake --build . --target test
-      #   - run: ./helloworld_cli
+      - run: ./ipFilter
       - run: cmake --build . --target package
       - name: Create Release
         id: create_release
@@ -37,6 +37,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./helloworld-1.0.${{ github.run_number }}-Linux.deb
-          asset_name: helloworld-1.0.${{ github.run_number }}-Linux.deb
+          asset_path: ./ipFilter-1.0.${{ github.run_number }}-Linux.deb
+          asset_name: ipFilter-1.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
