--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       - run: cmake . -DPATCH_VERSION=${{ github.run_number }}
       - run: cmake --build .
       - run: cmake --build . --target test
-      - run: ./ipFilter
+      - run: ./IPParser ../ip_filter.tsv
       - run: cmake --build . --target package
       - name: Create Release
         id: create_release
@@ -37,6 +37,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./ipFilter-1.0.${{ github.run_number }}-Linux.deb
-          asset_name: ipFilter-1.0.${{ github.run_number }}-Linux.deb
+          asset_path: ./IPParser-1.0.${{ github.run_number }}-Linux.deb
+          asset_name: IPParser-1.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
