--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,78 +1,20 @@
-cmake_minimum_required(VERSION 3.29)
+cmake_minimum_required(VERSION 3.10)
+project(IPParser)
 
-set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
-set(PROJECT_VESRION 1.0.${PATCH_VERSION})
-
-project(ip_filter VERSION ${PROJECT_VESRION})
-
-find_package(Boost COMPONENTS unit_test_framework REQUIRED)
-
-# configure_file(version.h.in version.h)
-
+# Set C++ standard
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED On)
 
-add_executable(ipFilter ip_filter.cpp)
-# add_library(helloworld lib.cpp)
-add_executable(ipFilterTest ip_filter_test.cpp)
+# Include directories
+include_directories(include)
 
+# Add executable for the main program
+add_executable(IPParser src/main.cpp src/IPParser.cpp)
 
-# set_target_properties(helloworld_cli helloworld test_version PROPERTIES
-#     CXX_STANDARD 14
-#     CXX_STANDARD_REQUIRED ON
-# )
-# target_include_directories(helloworld
-#     PRIVATE "${CMAKE_BINARY_DIR}"
-# )
-# set_target_properties(test_version PROPERTIES
-#     COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
-#     INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
-# )
+# Find Boost library
+find_package(Boost 1.65 REQUIRED COMPONENTS unit_test_framework)
+include_directories(${Boost_INCLUDE_DIRS})
 
-# target_link_libraries(helloworld_cli PRIVATE
-#     helloworld
-# )
-# target_link_libraries(test_version
-#     ${Boost_LIBRARIES}
-#     helloworld
-# )
+# Add executable for the tests
+add_executable(runTests tests/test_IPParser.cpp src/IPParser.cpp)
 
-# if (MSVC)
-#     target_compile_options(helloworld_cli PRIVATE
-#         /W4
-#     )
-#     target_compile_options(helloworld PRIVATE
-#         /W4
-#     )
-#     target_compile_options(test_version PRIVATE
-#         /W4
-#     )
-# else ()
-#     target_compile_options(helloworld_cli PRIVATE
-#         -Wall -Wextra -pedantic -Werror
-#     )
-#     target_compile_options(helloworld PRIVATE
-#         -Wall -Wextra -pedantic -Werror
-#     )
-#     target_compile_options(test_version PRIVATE
-#         -Wall -Wextra -pedantic -Werror
-#     )
-# endif()
-
-
-
-# install(TARGETS helloworld_cli RUNTIME DESTINATION bin)
-
-# set(CPACK_GENERATOR DEB)
-
-# set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
-# set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
-# set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
-
-# set(CPACK_PACKAGE_CONTACT example@example.com)
-
-# include(CPack)
-
-enable_testing()
-
-add_test(ipFilterTest ipFilterTest)
+target_link_libraries(runTests ${Boost_LIBRARIES})
