--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,18 +8,28 @@ on:
 
 jobs:
   build:
-    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - run: sudo apt-get update && sudo apt-get install libboost-test-dev -y
-      - run: cmake . -DPATCH_VERSION=${{ github.run_number }}
-      - run: cmake --build .
-      - run: cmake --build . --target test
-      - run: ./IPParser ../ip_filter.tsv
-      - run: cmake --build . --target package
+
+      - name: Install Boost Test
+        run: sudo apt-get update && sudo apt-get install libboost-test-dev -y
+
+      - name: Configure and build
+        run: |
+          cmake -Bbuild -S. -DPATCH_VERSION=${{ github.run_number }}
+          cmake --build build
+
+      - name: Run tests
+        run: |
+          cd build
+          ctest --output-on-failure
+
+      - name: Package
+        run: cmake --build build --target package
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -30,6 +40,7 @@ jobs:
           release_name: Release ${{ github.run_number }}
           draft: false
           prerelease: false
+
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -37,6 +48,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./IPParser-1.0.${{ github.run_number }}-Linux.deb
+          asset_path: ./build/IPParser-1.0.${{ github.run_number }}-Linux.deb
           asset_name: IPParser-1.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
