--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,6 @@ jobs:
         run: |
           cd build
           ctest --output-on-failure
-          ls -la
 
       - name: Package
         run: cmake --build build --target package
@@ -41,6 +40,9 @@ jobs:
           release_name: Release ${{ github.run_number }}
           draft: false
           prerelease: false
+
+      - name: Check directory
+        run: ls -la
 
       - name: Upload Release Asset
         id: upload-release-asset
