--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ target_link_libraries(runTests ${Boost_LIBRARIES})
 install(TARGETS IPParser RUNTIME DESTINATION bin)
 # CParck configuration
 include(CPack)
-set(CPACK_GENERATOR "DEB")
+set(CPACK_GENERATOR DEB)
 set(CPACK_PACKAGE_NAME "IPParser")
 set(CPACK_PACKAGE_VERSION "1.0.${PATCH_VERSION}")
 # set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
