--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Configure and build
         run: |
-          cmake . -DPATCH_VERSION=${{ github.run_number }}
+          cmake -Bbuild -S. -DPATCH_VERSION=${{ github.run_number }}
           cmake --build build
 
       - name: Run tests
