--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,11 +27,11 @@ target_link_libraries(runTests ${Boost_LIBRARIES})
 include(CPack)
 set(CPACK_GENERATOR "DEB")
 set(CPACK_PACKAGE_NAME "IPParser")
-set(CPACK_PACKAGE_VERSION "1.0.${PATCH_VERSION}")
+# set(CPACK_PACKAGE_VERSION "1.0.${PATCH_VERSION}")
 # set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
-# set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
-# set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
-# set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 set(CPACK_PACKAGE_CONTACT example@example.com)
 
 
