--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,27 +8,35 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
           submodules: true
 
-      - name: Install Boost Test
-        run: sudo apt-get update && sudo apt-get install libboost-test-dev -y
+      - name: Set up CMake
+        uses: jwlawson/actions-setup-cmake@v1.10
 
-      - name: Configure and build
+      - name: Install dependencies
         run: |
-          cmake -Bbuild -S. -DPATCH_VERSION=${{ github.run_number }}
-          cmake --build build
+          choco install -y boost-msvc-14.2
+          choco install -y cmake --installargs 'ADD_CMAKE_TO_PATH=System'
+
+      - name: Configure CMake
+        run: cmake -S . -B build -DCPACK_PACKAGE_VERSION=${{ github.run_number }}
+
+      - name: Build project
+        run: cmake --build build --target all
 
       - name: Run tests
-        run: |
-          cd build
-          ctest --output-on-failure
+        run: ctest --test-dir build --output-on-failure
 
-      - name: Package
+      - name: Package with CPack
         run: cmake --build build --target package
+
+      - name: List build directory
+        run: dir build
 
       - name: Create Release
         id: create_release
@@ -41,9 +49,6 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: List Build Directory
-        run: ls -la build
-
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -51,6 +56,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/IPParser-1.0.${{ github.run_number }}-Linux.deb
-          asset_name: IPParser-1.0.${{ github.run_number }}-Linux.deb
-          asset_content_type: application/vnd.debian.binary-package
+          asset_path: ./build/IPParser-1.0.${{ github.run_number }}-win64.exe
+          asset_name: IPParser-1.0.${{ github.run_number }}-win64.exe
+          asset_content_type: application/vnd.microsoft.portable-executable
