--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,10 +23,9 @@ jobs:
           choco install -y boost-msvc-14.2
           choco install -y cmake --installargs 'ADD_CMAKE_TO_PATH=System'
 
-      - name: List build directory
-        run: |
-          dir C:\Program Files
-          dir C:\Program Files\Boost
+      - name: List Boost Directory
+        run: Get-ChildItem -Path 'C:\Program Files\Boost' -Recurse
+        shell: pwsh
 
       - name: Configure CMake
         run: cmake -S . -B build -DCPACK_PACKAGE_VERSION=${{ github.run_number }}
