--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,16 @@ project(IPParser VERSION ${PROJECT_VERSION})
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 20)
 
+SET(Boost_USE_STATIC_LIBS OFF)
+IF( WIN32 )
+    # The auto-linking feature has problems with USE_STATIC_LIBS off, so we use
+    # BOOST_ALL_NO_LIB to turn it off.
+    # Several boost libraries headers aren't configured correctly if
+    # USE_STATIC_LIBS is off, so we explicitly say they are dynamic with the
+    # remaining definitions.
+    ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -DBOOST_PROGRAM_OPTIONS_DYN_LINK -DBOOST_IOSTREAMS_DYN_LINK -DBOOST_THREAD_DYN_LINK)
+ENDIF( )
+
 # Include directories
 include_directories(include)
 
@@ -15,7 +25,7 @@ include_directories(include)
 add_executable(IPParser src/main.cpp src/IPParser.cpp)
 
 # Find Boost library
-set(BOOST_ROOT "C:/ProgramData/chocolatey/lib/boost-msvc-14.2/tools/boost_1_74_0")
+# set(BOOST_ROOT "C:/ProgramData/chocolatey/lib/boost-msvc-14.2/tools/boost_1_74_0")
 find_package(Boost 1.65 REQUIRED COMPONENTS unit_test_framework)
 include_directories(${Boost_INCLUDE_DIRS})
 
