--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,13 +18,10 @@ jobs:
       - name: Set up CMake
         uses: jwlawson/actions-setup-cmake@v1.10
 
-      - name: Install vcpkg
+      - name: Install dependencies
         run: |
-          git clone https://github.com/microsoft/vcpkg.git
-          .\vcpkg\bootstrap-vcpkg.bat
-
-      - name: Install Google Test
-        run: .\vcpkg\vcpkg.exe install gtest
+          choco install -y cmake --installargs 'ADD_CMAKE_TO_PATH=System'
+          choco install -y boost-msvc-14.2
 
       - name: Configure CMake
         run: cmake -S . -B build -DCPACK_PACKAGE_VERSION=${{ github.run_number }}
