--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           # REQUIRED: Specify the required boost version
           # A list of supported versions can be found here:
           # https://github.com/MarkusJx/prebuilt-boost/blob/main/versions-manifest.json
-          boost_version: 1.74.0
+          # boost_version: 1.74.0
           # OPTIONAL: Specify a toolset
           toolset: msvc14.2
           # OPTIONAL: Specify a custon install location
