--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,9 +29,9 @@ jobs:
           # REQUIRED: Specify the required boost version
           # A list of supported versions can be found here:
           # https://github.com/MarkusJx/prebuilt-boost/blob/main/versions-manifest.json
-          # boost_version: 1.74.0
+          boost_version: 1.84.0
           # OPTIONAL: Specify a toolset
-          toolset: msvc14.2
+          toolset: msvc
           # OPTIONAL: Specify a custon install location
           # boost_install_dir: C:\some_directory
           # OPTIONAL: Specify a platform version
