Updated release.yml file so that it builds only necessary package with test files.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: [windows-latest]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -18,10 +18,24 @@ jobs:
       - name: Set up CMake
         uses: jwlawson/actions-setup-cmake@v1.10
 
-      - name: Install dependencies
+      - name: Cache Boost
+        id: cache-boost
+        uses: actions/cache@v2
+        with:
+          path: C:\local\boost_1_84_0
+          key: boost-${{ runner.os }}-${{ hashFiles('**/CMakeLists.txt') }}-1.84.0
+          restore-keys: |
+            boost-${{ runner.os }}-
+
+      - name: Install Boost unit_test_framework
+        if: steps.cache-boost.outputs.cache-hit != 'true'
         run: |
           choco install -y cmake --installargs 'ADD_CMAKE_TO_PATH=System'
-          choco install -y boost-msvc-14.2
+          curl -LO https://boostorg.jfrog.io/artifactory/main/release/1.81.0/source/boost_1_84_0.zip
+          tar -xf boost_1_84_0.zip -C C:\local
+          cd C:\local\boost_1_84_0
+          bootstrap
+          .\b2 --with-test install
 
       - name: Configure CMake
         run: cmake -S . -B build -DCPACK_PACKAGE_VERSION=${{ github.run_number }}
