Linking directly to Boost::unit_test_framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ include_directories(${Boost_INCLUDE_DIRS})
 add_executable(runTests tests/test_IPParser.cpp src/IPParser.cpp)
 
 message(STATUS "Boost_LIBRARIES: ${Boost_LIBRARIES}")
-target_link_libraries(runTests LINK_PUBLIC ${Boost_LIBRARIES})
+# target_link_libraries(runTests LINK_PUBLIC ${Boost_LIBRARIES})
 target_link_libraries(runTests Boost::unit_test_framework)
 
 # CParck configuration
