--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,17 @@ jobs:
           name: package
           path: build/IPParser.exe
 
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./build/IPParser.exe
+          asset_name: IPParser-1.0.${{ github.run_number }}-win64.exe
+          asset_content_type: application/vnd.debian.binary-package
+
   build-ubuntu:
     runs-on: ubuntu-latest
     steps:
