--- a/installer.nsi.in
+++ b/installer.nsi.in
@@ -1,5 +1,5 @@
 ; Name of the installer
-OutFile "@CMAKE_BINARY_DIR@\\IPParser.exe"
+OutFile "@CMAKE_BINARY_DIR@\\IPParserInstaller.exe"
 
 ; Default installation directory
 InstallDir "$PROGRAMFILES64\\IPParser"
@@ -14,7 +14,7 @@ Page instfiles
 ; Sections
 Section "MainSection" SEC01
     SetOutPath "$INSTDIR"
-    File "@CMAKE_BINARY_DIR@\\Debug\\IPParser.exe"
+    File "@CMAKE_BINARY_DIR@\\Release\\IPParser.exe"
     ; Add more files if needed
     ; File "path\\to\\another\\file.ext"
 SectionEnd
