--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,11 +32,8 @@ jobs:
       - name: List build directory
         run: dir build
 
-      - name: List x64 directory
-        run: dir build/x64
-
-      - name: List Release directory
-        run: dir build/x64/Release
+      - name: List Debug directory
+        run: dir build/Debug
 
       - name: Run tests
         run: ctest --test-dir build --output-on-failure --build-config Release
