--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install CMake
         run: choco install -y cmake --installargs 'ADD_CMAKE_TO_PATH=System'
 
-      - name: Install Boost
-        run: choco install -y boost-msvc-14.2
+      # - name: Install Boost
+      #   run: choco install -y boost-msvc-14.2
 
       - name: Configure CMake
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DCPACK_PACKAGE_VERSION=${{ github.run_number }}
