--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,8 +48,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: Win ${{ github.run_number }}
-          release_name: Win-Release ${{ github.run_number }}
+          tag_name: ${{ github.run_number }}
+          release_name: Release ${{ github.run_number }}
           draft: false
           prerelease: false
 
@@ -93,8 +93,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: Linux ${{ github.run_number }}
-          release_name: Lnx-Release ${{ github.run_number }}
+          tag_name: ${{ github.run_number }}-${{ github.sha }}
+          release_name: Release ${{ github.run_number }}
           draft: false
           prerelease: false
 
