--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,10 +48,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.run_number }}
+          tag_name: ${{ github.run_number }}-${{ github.sha }}
           release_name: Release ${{ github.run_number }}
           draft: false
           prerelease: false
+
+      - name: List build directory
+        run: dir build
 
       - name: Upload Release Asset
         id: upload-release-asset
