--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,6 +102,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: List build directory
+        run: dir build
+
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
@@ -118,6 +121,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: List Build Directory
+        run: ls -la build
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
